--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sparrow",
+  "name": "zhangjg-sparrow",
   "version": "1.0.0",
   "description": "library",
   "main": "lib/sparrow.js",
